src/routes/Onboarding/onboarding.css
.page-container {
    position: relative;
    overflow-y: hidden;
    height: 93vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 20px;
    /* Primary/ Gradient */
    background: linear-gradient(180deg, #A93BFF 0%, #8834FF 100%), #DADADA;
    color: white;
}


.page-header {
    width: 100%;
    /* border: 1px solid #000000; */
    height: auto;
    display: flex;
    flex-direction: row;
    position: relative;
    justify-content: center;
}

.page-header-image {
    /* left */

    /* Auto layout */
    position: absolute;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 0px;
    left: 0;
    width: 246px;
    height: 70px;
    /* Inside auto layout */

    flex: none;
    order: 0;
    flex-grow: 0;
}

.progress-bar-container {
    display: flex;
    flex-direction: column;
}

.page-header-progress {
    display: flex;
    flex-direction: row;
    width: 60%;
    justify-content: center;
}

.page-header-progress-bar {
    width: 200px;
}

.form-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 100px 0px 0px;
    z-index: 10000;
    width: 80%;
    height: 725px;
    /* border: 1px solid #000000; */


    /* Inside auto layout */
}

.previous-page {
    position: absolute;
    width: 100%;
    height: 100%;
    padding-top: 0px;
    pointer-events: none;
    transition: transform 300ms ease 0s, opacity 300ms ease 0s;
    opacity: 0;
    transform: translateY(-100vh);
}

.current-page {
    position: absolute;
    width: 100%;
    height: 100%;
    padding-top: 0px;
    transition: transform 300ms ease 0s, opacity 200ms ease 0s;
    display: flex;
}

 

.next-page {
    position: absolute;
    width: 100%;
    height: 100%;
    padding-top: 0px;
    pointer-events: none;
    transition: transform 300ms ease 0s, opacity 200ms ease 0s;
    opacity: 0;
    transform: translateY(100vh);

}

.layout-wrapper {
    position: absolute;
    inset: 0px;
    opacity: 0;
    transition: opacity 0.2s ease 0s;
    pointer-events: none;
    z-index: -10;
}

.input-header {
    /* Auto layout */


    /* padding: 0px 248px; */
    gap: 10px;
    word-wrap: break-word;
    /*     width: 100%; */
    /* height: 50px; */


    /* Inside auto layout */

}

.input-header-text {
    /* Menu Header */
    /* height: 50px; */

    font-family: 'Poppins';
    font-style: normal;
    font-weight: 600;
    font-size: 30px;
    line-height: 50px;
    /* identical to box height, or 167% */

    display: flex;
    align-items: center;
    text-align: center;
    justify-content: center;
    /* White */

    color: #FFFFFF;


    /* Inside auto layout */
}

.input-header-text>p {
    margin-bottom: 0;
}

.input-caption-container {
    /* Auto layout */

    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: flex-start;
    padding: 10px;
    gap: 10px;

    /*   width: 1280px; */
    height: 62px;


    /* Inside auto layout */

    flex: none;
    /*  order: 1; */
    flex-grow: 0;
}

.input-caption-text {
    width: 425px;
    height: 42px;

    /* Samplead body */

    font-family: 'Poppins';
    font-style: normal;
    font-weight: 200;
    font-size: 14px;
    line-height: 21px;
    display: flex;
    align-items: center;
    text-align: center;

    color: #FFFFFF;


    /* Inside auto layout */

    flex: none;
    order: 0;
    flex-grow: 0;
}

.input-box-text {
    /* Input */
    box-sizing: border-box;

    /* Auto layout */

    display: flex;
    flex-direction: row;
    align-items: flex-start;
    padding: 6px 10px;
    gap: 10px;
    width: 481px;
    height: 36px;
    left: 399.5px;
    top: 170px;
    background: #FFFFFF;
    /* Naturals / N200 */

    /* border: 1px solid #000000; */
    border-radius: 6px;
}

.input-box-text::placeholder {
    color: #DADADA;
}

.input-bar {
    margin-bottom: 8px;
}

.short-input-box {
    /* Input */
    box-sizing: border-box;

    /* Auto layout */

    display: flex;
    flex-direction: row;
    align-items: flex-start;
    padding: 6px 10px;
    gap: 10px;

    height: 36px;
    left: 399.5px;
    top: 170px;

    background: #FFFFFF;
    /* Naturals / N200 */

    /* border: 1px solid #000000; */
    border-radius: 6px;
}

.error-msg {
    /* Error Message */
    color: white;
}

.checkbox-wrapper {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
}


.checkbox-container-wrapper {
    /* Auto layout */
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: flex-start;
    padding: 10px;
    gap: 10px;

}

.checkbox-container {
    /* Auto layout */
    /*  margin-left: 8%; */
    display: flex;
    flex-direction: row;
    padding: 10px;
    gap: 10px;
   width: 1280px;
    justify-content: center;
    /* height: 101px;
    height: auto; */
    width: 500px;
    /* Inside auto layout */
    flex-wrap: wrap;
}


.checkbox-input {
    height: 21px;
    left: 22px;
    top: 30px;
    width: 25%;
    flex-wrap: wrap;
    /* Samplead body */

    font-family: 'Poppins';
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    line-height: 21px;
    /* identical to box height */
    columns: 2 auto;
    display: flex;
    align-items: center;
    justify-content: center;
    /*  margin-left: 40px; */
    /*  padding-left: 30px; */
    /* White */

    color: #FFFFFF
}

.checkbox-col-3 {
    width: 31%;
    columns: 3 auto;
}

.checkbox-col-4 {
    width: 20%;
}

.checkbox-w-close {
    justify-content: initial;
    width: 45%;
}

.checkbox-w-medium {
    min-width: 50%;
    max-width: 100%;
    margin-left: 0;
}

.checkbox-w-wide {
    width: 1280px;
}

.checkbox-input-wrapper {
    display: flex;
    justify-content: flex-start;
    width: 120px;
    white-space: nowrap;

}

.checkbox-input-inner-wrapper {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 3px;
}


.subheader {
    width: 460px;
    height: 42px;
    /* Samplead body */
    font-family: 'Poppins';
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    line-height: 21px;

    /*  margin-top: 20px; */
    margin-bottom: 20px;

    color: #FFFFFF;
}

.margin-y-low {
    margin-top: 5px;
    margin-bottom: 5px;
}

.fit-to-width {
    width: 100%;
}

.centered {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.centered-radio {
    display: flex;
    flex-direction: row;
    width: 40%;
    justify-content: center;
    margin-top: 10px;
    margin-left: 80px;
}

.mb-1 {
    margin-bottom: 10px
}

.bottom-question-container {
    display: flex;
    flex-direction: row;
    padding: 0px;
    gap: 29px;
    justify-content: center;
    width: 100%;
    height: 200px;
    /* Inside auto layout */
    margin-top: 10px;
    flex: none;
    order: 1;
    flex-grow: 0;

}

.full-length-container {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.radio-and-input-container {
    color: white;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 200px;
    padding-left: 50px;
    padding-right: 50px;
    padding-top: 25px;
    padding-bottom: 25px;
    width: auto;

}

.auto-grow {
    height: auto;
}

.align-center {
    text-align: center;
}


.add-custom-option {
    color: white;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;


    align-items: center;
}

.add-custom-option-text {
    cursor: pointer;
}

.add-custom-option-container {
    margin-top: 80px;
}

.link {
    cursor: pointer;
}

.link:hover {
    color: #FFC700;
}

.low-padding {
    padding: 20px;
}

.file-uploader-box {
    display: flex;
    color: white !important;
    flex-direction: column;
    align-items: flex-end;
    padding: 30px;
    gap: 18px;
    color: white;
    /*  Add dotted white border */
    border-color: white !important;
    width: 543px;
    height: 100px !important;

}

.file-uploader-box>svg {
    display: none;
}

.file-uploader-box>div {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 180px;
}

.file-uploader-box>div>span {
    color: white !important;
    font-size: 15px;
}

.file-uploader-box>div>span:last-child {
    display: none;
}

.file-upload-box-child {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    padding: 0px 20px;
}

.file-upload-box-child-text {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.uploaded-file-list-container {
    padding: 10px;
    color: white;
}

.subheader-text {
    width: 480px;
    text-align: center;
}

.weight-200 {
    font-weight: 200;
}

@media (max-width: 1300px) {
    .checkbox-container {
        margin-left: 0;
        width: 100% !important;
        height: auto;
    }
    .checkbox-w-close {
        width: 100%;
    }
    
    .checkbox-col-4 {
        width: 31%;
    }

    
}

/* media query */
@media (max-width: 768px) {
    .page-container {
        min-height: 93vh;
        height: 100%;
    }
     .form-container {
        height: auto;
     }

    .checkbox-container {
        margin-left: 0;
        width: 100%;
        height: auto;
    }

    .checkbox-container-wrapper {
        /* Auto layout */
        display: flex;
        flex-direction: row;
        justify-content: center;
        width: 100%;
        height: auto;
    }

    .checkbox-input {
        width: 48%;
        margin-top: 15px;
    }

    .bottom-question-container {
        flex-direction: column;
        height: auto;
    }

    /* .radio-and-input-container {} */

    .left-question {
        margin-bottom: 80px;
    }
}
 

